fix dark mode on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -96,41 +96,49 @@
        src: url(https://fonts.gstatic.com/s/roboto/v30/KFOjCnqEu92Fr1Mu51TzBic6CsQ.woff2) format('woff2');
        unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+0304, U+0308, U+0329, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
-body{
+
+body {
        margin-top: 0;
        background-color: var(--bg-color);
        color: var(--text-color);
 }
-      
+
 html {
        box-sizing: border-box;
-     }
-     *,
-     *::before,
-     *::after {
+}
+
+*,
+*::before,
+*::after {
        box-sizing: inherit;
-     }
-     
-     body {
+}
+
+body {
        --text-color: #222;
        --bkg-color: #aed7ed;
-     }
-     body.dark-theme {
+}
+
+body.dark-theme {
        --text-color: #eee;
        --bkg-color: #222;
-     }
-      
-       @media (prefers-color-scheme: dark) {
-              /* defaults to dark theme */
-              body {
-                --text-color: #eee;
-                --bkg-color: #222;
-              }
-              body.light-theme {
-                --text-color: #222;
-                --bkg-color: #aed7ed; /* Background color */;
-                   }
-            }
+}
+
+@media (prefers-color-scheme: dark) {
+
+       /* defaults to dark theme */
+       body {
+              --text-color: #eee;
+              --bkg-color: #222;
+       }
+
+       body.light-theme {
+              --text-color: #222;
+              --bkg-color: #aed7ed;
+              /* Background color */
+              ;
+       }
+}
+
 html {
        max-width: 75ch;
        margin: auto;
@@ -144,24 +152,32 @@ html {
        scroll-padding-top: var(--header-height-extra);
 }
 
-body{
+body {
        background: var(--bkg-color);
        color: var(--text-color);
 }
- strong , em, h2 {
+
+strong,
+em,
+h2 {
        font-family: 'Protest Riot', serif;
 }
 
 header {
        position: sticky;
-       width: 100%;
-       top:0;
+       background-color: #e5c1cd;
        /*Codigo del profe DM */
        height: var(--header-height);
        padding: 0.5rem;
        box-sizing: content-box;
 }
 
+header a{
+       text-decoration: none;
+       padding-top: 1rem;
+       margin-top: 1.5rem;
+       font-size: 1.5vw;
+}
 nav ul {
        list-style: none;
        padding: 0;
@@ -172,12 +188,13 @@ nav ul {
        padding-top: 0.5em;
        align-items: center;
        gap: 2em;
-
+      
 }
 
 nav {
        background-color: #e5c1cd;
        height: 3.5rem;
+       top: 0;
        width: 100%;
 }
 
@@ -186,113 +203,126 @@ nav li {
 }
 
 
-.Skills ul{
-       display: flex; 
+.Skills ul {
+       display: flex;
        align-items: center;
-       justify-content:space-between;
+       justify-content: space-between;
        gap: 10px;
        flex-flow: wrap;
 
 }
-.Skills li{
+
+.Skills li {
        display: inline-block;
        border: 2px solid #e5c1cd;
        background-color: #f3dbcf;
+       color: #000000;
        flex: auto;
 }
 
-.grid{
+.grid {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
        grid-template-areas: "one two";
 }
-.edu{
+
+.edu {
        grid-area: one;
 }
-.lang{
+
+.lang {
        grid-area: two;
 }
-.edu li, .lang li{
+
+.edu li,
+.lang li {
        display: block;
        line-height: 2em;
 
 }
-.con li{
+
+.con li {
        display: inline-block;
 }
-li > .button {
+
+li>.button {
        background-color: #dce4e122;
        border: none;
        padding: 15px 32px 15px 15px;
        text-align: center;
        display: inline-block;
-     }
+}
 
-     /* Dark mode styles */
+/* Dark mode styles */
 .dark-theme nav,
+.dark-theme header,
 .dark-theme .Skills ul li,
 .dark-theme .card,
 .dark-theme .desc,
 .dark-theme .title {
-    color: #ffffff; 
-    background-color:#4e5150; 
+       color: #ffffff;
+       background-color: #4e5150;
 }
-.dark-theme .action{
-    background-color:#313f3f; 
+
+.dark-theme .action {
+       background-color: #313f3f;
 }
-.dark-theme a:visited{
-      color: #e5c1cd;
+
+.dark-theme a:visited {
+       color: #e5c1cd;
 }
-.dark-theme a:link{
-       color:#ffffff;
+
+.dark-theme a:link {
+       color: #ffffff;
 }
 
 .cards {
        display: grid;
        grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
        gap: 40px;
-     }
+}
+
 /* source: https://uiverse.io/Yaya12085/little-puma-29 */
 
-     
-     .card {
+
+.card {
        max-width: 400px;
        border-radius: 0.5rem;
        background-color: #EAD2DF;
        box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
        border: 1px solid transparent;
-     }
-     
-     .card a {
+}
+
+.card a {
        text-decoration: none;
-     }
-     
-     .content {
+}
+
+.content {
        padding: 1.1rem;
-     }
-     
-     .imgvirtualpet {
+}
+
+.imgvirtualpet {
        object-fit: cover;
        width: 100%;
        height: 300px;
        background-color: rgb(239, 205, 255);
-     }
-     
-     .title {
+}
+
+.title {
        color: #111827;
        font-size: 1.125rem;
        line-height: 1.75rem;
        font-weight: 600;
-     }
-     
-     .desc {
+}
+
+.desc {
        margin-top: 0.5rem;
        color: #000000;
        font-size: 0.875rem;
        line-height: 1.25rem;
-     }
-     
-     .action {
+}
+
+.action {
        display: inline-flex;
        margin-top: 1rem;
        color: #ffffff;
@@ -304,19 +334,71 @@ li > .button {
        background-color: #bf88df;
        padding: 4px 8px;
        border-radius: 4px;
-     }
-     
-     .action span {
-       transition: .3s ease;
-     }
-     
-     .action:hover span {
-       transform: translateX(4px);
-     }
+}
 
-     .darkicon{
+.action span {
+       transition: .3s ease;
+}
+
+.action:hover span {
+       transform: translateX(4px);
+}
+
+.darkicon {
        float: right;
        padding-top: 0.5rem;
        padding-right: 1.5rem;
-     }
-     
+}
+
+@media screen and (max-width: 500px) {
+       header a {
+              float: none;
+              display: block;
+              text-align: left;
+              padding: 0.5rem;
+              text-decoration: none;
+       }
+
+       header {
+              background-color: #e5c1cd;
+              font-size: 3vw;
+              padding: 0; 
+       }
+
+       header-right {
+              float: none;
+       }
+
+       /* I had  to repeat it  dark mode rules on mobile query */
+       body {
+              --text-color: #222;
+              --bkg-color: #aed7ed;
+       }
+
+       body.dark-theme {
+              --text-color: #eee;
+              --bkg-color: #222;
+       }
+
+       .dark-theme nav,
+       .dark-theme header,
+       .dark-theme .Skills ul li,
+       .dark-theme .card,
+       .dark-theme .desc,
+       .dark-theme .title {
+              color: #ffffff;
+              background-color: #4e5150;
+       }
+
+       .dark-theme .action {
+              background-color: #313f3f;
+       }
+
+       .dark-theme a:visited {
+              color: #e5c1cd;
+       }
+
+       .dark-theme a:link {
+              color: #de9898;
+       }
+}
